 cnp-allow-only-default-elastic-ports-yuu3cty.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-allow-only-default-elastic-ports-biajfgj
  namespace: kube-system
spec:
  description: "To block all ports except 9200 and 9300 in elastic pod"
  endpointSelector:
    matchLabels:
      k8s-app: cilium
      pod-template-generation: 1
      controller-revision-hash: 7b445dc7b4
  ingress:
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "9200"     #change port values to match your ports
        - ports:
            - port: "9300"
